--- a/templates/base.html
+++ b/templates/base.html
@@ -2,27 +2,46 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Site de Imóveis{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}JTF Imóveis{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <nav>
-        <a href="{{ url_for('index') }}">Início</a>
-        {% if session.get('username') %}
-            <a href="{{ url_for('cadastro_imovel') }}">Cadastrar Imóvel</a>
-            {% if session.get('is_admin') == 1 %}
-                <a href="{{ url_for('admin_imoveis') }}">Painel Admin</a>
-            {% endif %}
-            <span>Olá, {{ session['username'] }}</span>
-            <a href="{{ url_for('logout') }}">Sair</a>
-        {% else %}
-            <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('register') }}">Registrar</a>
-        {% endif %}
-    </nav>
+    <header>
+        <div class="top-nav">
+            <div class="contact-info">
+                <span>(11) 9999-9999 | contato@jtfimoveis.com.br</span>
+            </div>
+            <div class="user-actions">
+                {% if session.get('username') %}
+                    <span>Olá, {{ session['username'] }}</span>
+                    <a href="{{ url_for('logout') }}">Sair</a>
+                {% else %}
+                    <a href="{{ url_for('login') }}">Login</a>
+                    <a href="{{ url_for('register') }}">Registrar</a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="main-header">
+            <div class="logo">
+                <a href="{{ url_for('index') }}">
+                    <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Logo JTF Imóveis">
+                </a>
+            </div>
+            <nav class="main-nav">
+                <a href="{{ url_for('index') }}">Início</a>
+                <a href="#">Sobre Nós</a>
+                {% if session.get('is_admin') == 1 %}
+                    <a href="{{ url_for('admin_imoveis') }}">Painel Admin</a>
+                {% endif %}
+                <a href="{{ url_for('cadastro_imovel') }}">Anunciar Imóvel</a>
+            </nav>
+        </div>
+    </header>
 
     <main>
         {% block content %}{% endblock %}
     </main>
+
 </body>
 </html>
