--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <div class="filter-group">
             <label for="cidade">Cidade</label>
             <select id="cidade" name="cidade">
-                <option value="">Todas as cidades</option>
+                <option value="">Todas</option>
                 <option value="Acorizal">Acorizal</option>
                 <option value="Água Boa">Água Boa</option>
                 <option value="Alta Floresta">Alta Floresta</option>
@@ -54,7 +54,7 @@
                 <option value="Colniza">Colniza</option>
                 <option value="Comodoro">Comodoro</option>
                 <option value="Confresa">Confresa</option>
-                <option value="Conquista d'Oeste">Conquista d'Oeste</option>
+                <option value="Conquista D'Oeste">Conquista D'Oeste</option>
                 <option value="Cotriguaçu">Cotriguaçu</option>
                 <option value="Cuiabá">Cuiabá</option>
                 <option value="Curvelândia">Curvelândia</option>
@@ -62,10 +62,10 @@
                 <option value="Diamantino">Diamantino</option>
                 <option value="Dom Aquino">Dom Aquino</option>
                 <option value="Feliz Natal">Feliz Natal</option>
-                <option value="Figueirópolis d'Oeste">Figueirópolis d'Oeste</option>
+                <option value="Figueirópolis D'Oeste">Figueirópolis D'Oeste</option>
                 <option value="Gaúcha do Norte">Gaúcha do Norte</option>
                 <option value="General Carneiro">General Carneiro</option>
-                <option value="Glória d'Oeste">Glória d'Oeste</option>
+                <option value="Glória D'Oeste">Glória D'Oeste</option>
                 <option value="Guarantã do Norte">Guarantã do Norte</option>
                 <option value="Guiratinga">Guiratinga</option>
                 <option value="Indiavaí">Indiavaí</option>
@@ -80,12 +80,13 @@
                 <option value="Juína">Juína</option>
                 <option value="Juruena">Juruena</option>
                 <option value="Juscimeira">Juscimeira</option>
-                <option value="Lambari d'Oeste">Lambari d'Oeste</option>
+                <option value="Lambari D'Oeste">Lambari D'Oeste</option>
                 <option value="Lucas do Rio Verde">Lucas do Rio Verde</option>
                 <option value="Luciara">Luciara</option>
+                <option value="Vila Bela da Santíssima Trindade">Vila Bela da Santíssima Trindade</option>
                 <option value="Marcelândia">Marcelândia</option>
                 <option value="Matupá">Matupá</option>
-                <option value="Mirassol d'Oeste">Mirassol d'Oeste</option>
+                <option value="Mirassol D'Oeste">Mirassol D'Oeste</option>
                 <option value="Nobres">Nobres</option>
                 <option value="Nortelândia">Nortelândia</option>
                 <option value="Nossa Senhora do Livramento">Nossa Senhora do Livramento</option>
@@ -100,7 +101,6 @@
                 <option value="Nova Mutum">Nova Mutum</option>
                 <option value="Nova Nazaré">Nova Nazaré</option>
                 <option value="Nova Olímpia">Nova Olímpia</option>
-                <option value="Nova Santa Helena">Nova Santa Helena</option>
                 <option value="Nova Ubiratã">Nova Ubiratã</option>
                 <option value="Nova Xavantina">Nova Xavantina</option>
                 <option value="Novo Horizonte do Norte">Novo Horizonte do Norte</option>
@@ -120,8 +120,88 @@
                 <option value="Porto dos Gaúchos">Porto dos Gaúchos</option>
                 <option value="Porto Esperidião">Porto Esperidião</option>
                 <option value="Porto Estrela">Porto Estrela</option>
-                <option value="Poxoréu">Poxoréu</option>
+                <option value="Poxoréo">Poxoréo</option>
                 <option value="Primavera do Leste">Primavera do Leste</option>
                 <option value="Querência">Querência</option>
                 <option value="Reserva do Cabaçal">Reserva do Cabaçal</option>
-                <option value="Ribeirão Cascalheira">Ribeirão Cascalheira</
+                <option value="Ribeirão Cascalheira">Ribeirão Cascalheira</option>
+                <option value="Ribeirãozinho">Ribeirãozinho</option>
+                <option value="Rio Branco">Rio Branco</option>
+                <option value="Rondolândia">Rondolândia</option>
+                <option value="Rondonópolis">Rondonópolis</option>
+                <option value="Rosário Oeste">Rosário Oeste</option>
+                <option value="Salto do Céu">Salto do Céu</option>
+                <option value="Santa Carmem">Santa Carmem</option>
+                <option value="Santa Cruz do Xingu">Santa Cruz do Xingu</option>
+                <option value="Santa Rita do Trivelato">Santa Rita do Trivelato</option>
+                <option value="Santa Terezinha">Santa Terezinha</option>
+                <option value="Santo Afonso">Santo Afonso</option>
+                <option value="Santo Antônio do Leste">Santo Antônio do Leste</option>
+                <option value="Santo Antônio do Leverger">Santo Antônio do Leverger</option>
+                <option value="São Félix do Araguaia">São Félix do Araguaia</option>
+                <option value="São José do Povo">São José do Povo</option>
+                <option value="São José do Rio Claro">São José do Rio Claro</option>
+                <option value="São José dos Quatro Marcos">São José dos Quatro Marcos</option>
+                <option value="São Pedro da Cipa">São Pedro da Cipa</option>
+                <option value="Sapezal">Sapezal</option>
+                <option value="Serra Nova Dourada">Serra Nova Dourada</option>
+                <option value="Sinop">Sinop</option>
+                <option value="Sorriso">Sorriso</option>
+                <option value="Tabaporã">Tabaporã</option>
+                <option value="Tangará da Serra">Tangará da Serra</option>
+                <option value="Tapurah">Tapurah</option>
+                <option value="Terra Nova do Norte">Terra Nova do Norte</option>
+                <option value="Tesouro">Tesouro</option>
+                <option value="Torixoréu">Torixoréu</option>
+                <option value="União do Sul">União do Sul</option>
+                <option value="Vale de São Domingos">Vale de São Domingos</option>
+                <option value="Várzea Grande">Várzea Grande</option>
+                <option value="Vera">Vera</option>
+                <option value="Vila Rica">Vila Rica</option>
+            </select>
+        </div>
+        <div class="filter-group">
+            <label for="quartos">Quartos</label>
+            <select id="quartos" name="quartos">
+                <option value="">Qualquer</option>
+                <option value="1">1+</option>
+                <option value="2">2+</option>
+                <option value="3">3+</option>
+                <option value="4">4+</option>
+            </select>
+        </div>
+        <button type="submit">Filtrar</button>
+    </section>
+
+    <div class="imoveis-list-container">
+        {% if imoveis %}
+            {% for imovel in imoveis %}
+                <article class="imovel-list-item">
+                    <div class="imovel-list-image">
+                        {% if imovel.fotos %}
+                            {% set foto = imovel.fotos.split(',')[0] %}
+                            <img src="{{ url_for('static', filename='uploads/' ~ foto) }}" alt="Foto de {{ imovel.titulo }}">
+                        {% else %}
+                            <img src="https://via.placeholder.com/300x250.png?text=Sem+Foto" alt="Sem foto">
+                        {% endif %}
+                    </div>
+                    <div class="imovel-list-content">
+                        <div>
+                            <h3>{{ imovel.titulo }}</h3>
+                            <p class="location">{{ imovel.endereco }}</p>
+                        </div>
+                        <div class="imovel-list-details">
+                            <span>&#128719; {{ imovel.quartos }} quartos</span>
+                            <span>&#128705; {{ imovel.banheiros }} banheiros</span>
+                            <span>&#128207; {{ imovel.area }} m²</span>
+                        </div>
+                        <p class="price">R$ {{ "%.2f"|format(imovel.preco) }}</p>
+                    </div>
+                </article>
+            {% endfor %}
+        {% else %}
+            <p style="text-align: center; font-size: 1.2rem;">Nenhum imóvel encontrado com os critérios selecionados.</p>
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
