--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,6 @@
             </div>
             <nav class="main-nav">
                 <a href="{{ url_for('index') }}">Início</a>
-                <a href="#">Sobre Nós</a>
                 {% if session.get('is_admin') == 1 %}
                     <a href="{{ url_for('admin_imoveis') }}">Painel Admin</a>
                 {% endif %}
@@ -40,6 +39,18 @@
     </header>
 
     <main>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="container">
+                {% for category, message in messages %}
+                    <div class="flash flash-{{ category }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+
         {% block content %}{% endblock %}
     </main>
 
